--- a/index.html
+++ b/index.html
@@ -418,29 +418,29 @@
           <p class="footer-social-media-p">Social media</p>
           <ul class="footer-ul list">
             <li class="footer-icons-li">
-              <a href="#" class="icon_social link">
-                <svg class="social-icons" width="16" height="16">
+              <a href="#" class="footer-icons link">
+                <svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram_2"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icons-li">
-              <a href="#" class="icon_social link">
-                <svg class="social-icons" width="16" height="16">
+              <a href="#" class="footer-icons link">
+                <svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter_1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icons-li">
-              <a href="#" class="icon_social link">
-                <svg class="social-icons" width="16" height="16">
+              <a href="#" class="footer-icons link">
+                <svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook_1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icons-li">
-              <a href="#" class="icon_social link">
-                <svg class="social-icons" width="16" height="16">
+              <a href="#" class="footer-icons link">
+                <svg class="social-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin_1"></use>
                 </svg>
               </a>
