--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
       </section>
     </main>
     <footer class="footer-web-studio" id="contacts">
-      <div class="footer-web">
+      <div class="footer-web container">
         <div class="footer-div-web-studio">
           <a href="./index.html" class="footer-logo-iris link"
             >Web<span class="footer-logo-cloud">Studio</span></a
