--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header class="header-web-studio">
-      <div class="header-div-web-studio container">
+      <div class="header-div-web-studio header-container">
         <nav class="navigation list">
           <a href="./index.html" class="logo-navy-iris"
             >Web<span class="logo-navy-blue">Studio</span></a
