--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
               <a href="./index.html" class="menu-li-link current">Studio</a>
             </li>
             <li class="menu-li">
-              <a href="#portfolio" class="menu-li-link current">Portfolio</a>
+              <a href="#portfolio" class="menu-li-link">Portfolio</a>
             </li>
             <li class="menu-li">
-              <a href="#contacts" class="menu-li-link current">Contacts</a>
+              <a href="#contacts" class="menu-li-link">Contacts</a>
             </li>
           </ul>
         </nav>
